# utable

./: .gitignore  COPYING  Makefile.am  README  configure.ac
bldscripts/: bootstrap.sh  stdbuild.sh  stdconfig.sh
src/: Makefile.am  test_table.c
src/libunitbl/: Makefile.am  README  styles.c  styles.h  unicode_tbl.c  unicode_tbl.h  xstr.c  xstr.h
src/test/: ut.sh  ut1_correct.txt  ut2_correct.txt  ut3_correct.txt  ut4_correct.txt
